tests/dataset/tpc-ds/compiler/pl/q99.error
run: exit status 2
ERROR: /tmp/q99.pl:58: user:main '<meta-call>'/1: Unknown procedure: substr/4
